# connexion

./: .catwatch.yaml  .checkignore  .codeclimate.yml  .codevalidatorrc  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .turnstile.yml  .zappr.yaml  ARCHITECTURE.rst  CONTRIBUTING.rst  Dockerfile3.9  LICENSE.txt  MAINTAINERS  MANIFEST.in  NOTICE  README.md  README.rst  SECURITY.md  bandit.yaml  py2-coveragerc  py3-coveragerc  pyproject.toml  pytest.ini  release.sh  requirements-aiohttp.txt  requirements-all.txt  requirements-devel.txt  requirements-examples.txt  requirements-lint.txt  requirements-sanic.txt  requirements-test.txt  requirements-tox.txt  requirements.txt  setup.py  tox.ini
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE  dependabot.yml
.github/workflows/: lint_python.yml  pipeline.yml  release.yml
connexion/: __init__.py  __main__.py  api.py  app.py  cli.py  config.py  content_types.py  context.py  datastructures.py  exceptions.py  handlers.py  http_facts.py  json_schema.py  jsonifier.py  jsonref.py  lifecycle.py  mock.py  operation.py  options.py  problem.py  proxy.py  query_parsing.py  request.py  resolver.py  response.py  security.py  spec.py  specification_loader.py  swagger.py  testing.py  tests.py  types.py  uri_parsing.py  utils.py  validators.py  version.py
connexion/apis/: __init__.py  abstract.py  aiohttp_api.py  falcon_api.py  flask_api.py  flask_utils.py  middleware_api.py  sanic_api.py  starlette_api.py
connexion/apps/: __init__.py  abstract.py  aiohttp_app.py  async_app.py  asynchronous.py  falcon_app.py  flask.py  flask_app.py  sanic_app.py  starlette_app.py
connexion/decorators/: TracerDecorator.py  __init__.py  coroutine_wrappers.py  decorator.py  lifecycle.py  main.py  metrics.py  parameter.py  parameters.py  plugins.py  produces.py  query_parser.py  response.py  response_coroutine.py  security.py  uri_parsing.py  validation.py
connexion/frameworks/: __init__.py  abstract.py  flask.py  starlette.py
connexion/middleware/: __init__.py  abstract.py  base.py  context.py  exceptions.py  lifespan.py  main.py  request_validation.py  response_validation.py  routing.py  security.py  serialization.py  server_error.py  swagger_ui.py  test.py  validation.py  wsgi.py
connexion/operations/: __init__.py  abstract.py  mimetype.py  noop.py  openapi.py  secure.py  swagger2.py  validation.py
connexion/security/: __init__.py  aiohttp_security_handler_factory.py  aiohttp_security_handlers_factory.py  async_security_handler_factory.py  flask_security_handler_factory.py  middleware_security_handler_factory.py  sanic_security_handler_factory.py  security_handler_factory.py  sync_security_handler_factory.py
connexion/serialization/: deserializers.py
connexion/swagger-ui/: index.html
connexion/validators/: __init__.py  abstract.py  form_data.py  json.py  parameter.py
docs/: Makefile  apps_and_apis.rst  cli.rst  conf.py  configuration.rst  context.rst  cookbook.rst  exceptions.py  exceptions.rst  index.rst  lifespan.rst  middleware.rst  quickstart.rst  request.rst  request_response.rst  response.rst  routing.rst  security.rst  swagger_ui.rst  testing.rst  v3.rst  validation.rst
docs/images/: validation.excalidraw
especifico/: __init__.py  __main__.py  cli.py  exceptions.py  handlers.py  json_schema.py  jsonifier.py  lifecycle.py  mock.py  options.py  problem.py  resolver.py  spec.py  utils.py
especifico/apis/: __init__.py  abstract.py  aiohttp_api.py  flask_api.py  flask_utils.py
especifico/apps/: __init__.py  abstract.py  aiohttp_app.py  flask_app.py
especifico/decorators/: __init__.py  decorator.py  metrics.py  parameter.py  produces.py  response.py  uri_parsing.py  validation.py
especifico/operations/: __init__.py  abstract.py  compat.py  openapi.py  secure.py  swagger2.py
especifico/security/: __init__.py  aiohttp_security_handler_factory.py  async_security_handler_factory.py  security_handler_factory.py
examples/apikey/: README.rst  app.py
examples/basicauth/: README.rst  app.py  swagger.yaml
examples/enforcedefaults/: README.rst  app.py  enforcedefaults.py
examples/frameworks/: README.rst  hello_quart.py  hello_starlette.py  requirements.txt
examples/helloworld/: README.rst  hello.py
examples/helloworld_async/: README.rst  hello.py
examples/jwt/: README.rst  app.py  requirements.txt
examples/methodresolver/: README.rst  app.py
examples/oauth2/: README.rst  app.py  app.yaml  mock_tokeninfo.py  mock_tokeninfo.yaml
examples/oauth2_local_tokeninfo/: README.rst  app.py
examples/openapi31/: README.rst  app.py
examples/restyresolver/: README.rst  resty.py
examples/reverseproxy/: README.rst  app.py
examples/splitspecs/: README.rst  app.py
examples/sqlalchemy/: README.rst  app.py  orm.py  requirements.txt  swagger.yaml
examples/testclient/: README.rst  app.py  requirements.txt  tox.ini
scripts/: lint  test
test_middleware/: flask_app.py  openapi.yaml  quart_app.py  requirements.txt  sanic_app.py  sanic_app_issue.py  security.py  starlette_app.py  test.py
tests/: .test_api.py.swo  conftest.py  test_api.py  test_app.py  test_cli.py  test_datastructures.py  test_falcon.py  test_flask_encoder.py  test_flask_utils.py  test_json_validation.py  test_lifecycle.py  test_lifespan.py  test_metrics.py  test_middleware.py  test_mock.py  test_mock2.py  test_mock3.py  test_openapi31.py  test_openapi31_advanced.py  test_openapi31_allof_ref_upload.py  test_openapi31_complex_params.py  test_openapi31_file_upload.py  test_openapi31_simple_upload.py  test_operation.py  test_operation2.py  test_parameter.py  test_produces.py  test_references.py  test_resolver.py  test_resolver3.py  test_resolver_methodview.py  test_swagger.py  test_utils.py  test_validation.py  util.py
tests/aio/: test_aiohttp_app.py
tests/aiohttp/: test_aiohttp_api.py  test_aiohttp_api_secure.py  test_aiohttp_app.py  test_aiohttp_datetime.py  test_aiohttp_errors.py  test_aiohttp_multipart.py  test_aiohttp_reverse_proxy.py  test_aiohttp_simple_api.py  test_aiohttp_upload.py  (+1 more)
(+289 files in other folders)
