[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "connexion"
version = "2018.dev"
description = "API First for python"
authors = "Zalando SE <opensource@zalando.de>"
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/zalando/connexion/"
repository = "https://github.com/zalando/connexion/"
documentation = "https://connexion.readthedocs.io/en/latest/"
classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]

[tool.poetry.dependencies]
python = ">=2.7, >=3.4"
clickclick = ">=1.2"
jsonschema = ">=2.5.1,<3.0.0"
PyYAML = ">=3.11"
requests = ">=2.9.1"
six = ">=1.9"
inflection = ">=0.3.1"
pathlib = ">=1.0.1; python_version < '3.4'"
typing = ">=3.6.1; python_version < '3.6'"
openapi-spec-validator = ">=0.2.4"
flask = ">=0.10.1"

aiohttp = { version = ">=2.3.10",  python = ">=3.5.0", optional = true }
aiohttp-jinja2 = { version = ">=0.14.0",  python = ">=3.5.0", optional = true }

swagger-ui-bundle = { version = ">=0.0.2", optional = true }

[tool.poetry.extras]
aiohttp = ["aiohttp", "aiohttp-jinja2"]
flask = ["flask"]
swagger-ui = ["swagger-ui-bundle"]
dev = ["aiohttp", "aiohttp-jinja2", "swagger-ui-bundle", "testfixtures"]



[tool.poetry.dev-dependencies]
decorator = "*"
mock = "*"
pytest = "*"
pytest-cov = "*"
testfixtures = "*"
ujson = "*"

[tool.poetry.scripts]
connexion = "connexion.cli:main"
